# monasca-specs

./: .gitreview  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  redirect.py
doc/source/specs/backlog/: index.rst
doc/source/specs/queens/: index.rst
doc/source/specs/rocky/: index.rst  not-implemented
doc/source/specs/stein/: index.rst
priorities/: queens-priorities.rst  rocky-priorities.rst  stein-priorities.rst  train-priorities.rst  ussuri-priorities.rst  victoria-priorities.rst  xena-priorities.rst  yoga-priorities.rst
specs/: queens-template.rst  rocky-template.rst  stein-template.rst
specs/queens/approved/: implement-oslo-policy.rst  service-domain-for-self-service-agent-users.rst
specs/rocky/approved/: introduce-database-migrations.rst  metrics-retention.rst  monasca-services-in-docker.rst  python-persister-metrics.rst
specs/rocky/not-implemented/: monasca-events-publishing.rst
specs/stein/approved/: merge_apis.rst  monasca-events-listener.rst  upgrade-kafka-client.rst
