[metadata]
name = monasca-specs
summary = OpenStack Monasca Project Development Specs
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://specs.openstack.org/openstack/monasca-specs/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
builders = html
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[wheel]
universal = 1
